--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,77 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidMVVMSample" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Sample" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primaryDark</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/primary</item>
+        <item name="colorSecondaryVariant">@color/primaryDark</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/statusBar</item>
         <!-- Customize your theme here. -->
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+    </style>
+
+    <!-- dialog   -->
+    <style name="CustomDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
+    <!-- text   -->
+    <style name="TextAppearance.Text.Regular" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/ws_regular</item>
+    </style>
+
+    <style name="TextAppearance.Text.Medium" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/ws_medium</item>
+    </style>
+
+    <style name="TextAppearance.Text.Bold" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/ws_bold</item>
+    </style>
+
+    <style name="TextAppearance.Text.Light" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/ws_light</item>
+    </style>
+
+    <style name="TextAppearance.Text.Italic" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/ws_italic</item>
+    </style>
+
+    <style name="TextStylePrimary">
+        <item name="android:textColor">@color/primary</item>
+    </style>
+
+    <style name="TextStylePrimary.Regular" parent="TextStylePrimary">
+        <item name="android:textAppearance">@style/TextAppearance.Text.Regular</item>
+    </style>
+
+    <style name="TextStylePrimary.Medium" parent="TextStylePrimary">
+        <item name="android:textAppearance">@style/TextAppearance.Text.Medium</item>
+    </style>
+
+    <style name="TextStylePrimary.Bold" parent="TextStylePrimary">
+        <item name="android:textAppearance">@style/TextAppearance.Text.Bold</item>
+    </style>
+
+    <style name="TextStylePrimary.Light" parent="TextStylePrimary">
+        <item name="android:textAppearance">@style/TextAppearance.Text.Light</item>
+    </style>
+
+    <style name="TextStylePrimary.Italic" parent="TextStylePrimary">
+        <item name="android:textAppearance">@style/TextAppearance.Text.Italic</item>
+    </style>
+
+    <style name="TextStylePrimary.MainMenu" parent="TextStylePrimary.Regular">
+        <item name="android:textSize">@dimen/sp17</item>
+    </style>
+
+    <style name="roundedCornersImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/dp10</item>
     </style>
 </resources>
